[REFACTOR] Replace mapPostToData method with PostData DTO for improved data handling in PostService